unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/XDO_Tool_Tracking_Event__c.object-meta.xml
<CustomObject>
    <label>Tracking Event</label>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Tracking Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>