unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/fields/Asset_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Asset_Identifier__c</fullName>
    <label>Asset Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>