unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>