unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/fields/Once__c.field-meta.xml
<CustomField>
    <fullName>Once__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only raise a single instance of the event determined by the value in the Action property</description>
    <inlineHelpText>Only raise a single instance of the event determined by the value in the Action property</inlineHelpText>
    <label>Once?</label>
    <type>Checkbox</type>
</CustomField>