unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Indicates the progress of a Tracking Event record as it is processed by the services</description>
    <inlineHelpText>Indicates the progress of a Tracking Event record as it is processed by the services</inlineHelpText>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Mixpanel Event</fullName>
            </value>
            <value>
                <fullName>Mixpanel Profile</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>