unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>