unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>