unpackaged/main/default/objects/XDO_Tool_Tracking_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Once__c</columns>
    <columns>Type__c</columns>
    <columns>Event__c</columns>
    <columns>Asset_Identifier__c</columns>
    <columns>Action__c</columns>
    <columns>Payload__c</columns>
    <columns>Stage__c</columns>
    <columns>Error__c</columns>
    <columns>Email__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>